# cleanroom

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  vercel.json
.claude/commands/: cleanroom.md
data/enrichment/: accounts_enriched.csv
data/seed/: accounts.csv  contacts.csv  seed_metadata.json
docs/: architecture.md  demo.md
public/: index.html
scripts/: generate_seed.py  run_demo.py  setup.sh  setup_sf_schema.py
src/cleanroom/: __main__.py  cli.py
src/cleanroom/audit/: __init__.py  _issue.py  completeness_checker.py  duplicate_detector.py  orphan_finder.py  schema_validator.py
src/cleanroom/enrichment/: __init__.py  confidence_tracker.py  waterfall.py
src/cleanroom/enrichment/providers/: _base.py  apollo.py  claude_websearch.py  mock_clearbit.py
src/cleanroom/push/: salesforce_upsert.py
src/cleanroom/report/: html_renderer.py
src/cleanroom/report/templates/: before_after.html
src/cleanroom/resolution/: __init__.py  llm_tiebreaker.py  merge_strategy.py
src/cleanroom/seed/: flaw_injector.py  generator.py  seed_config.yaml
tests/: test_audit.py  test_enrichment.py  test_resolution.py  test_seed_reproducibility.py  test_smoke.py
