[project]
name = "cleanroom"
version = "0.1.0"
description = "CRM data quality + AI-assisted enrichment audit — one command, messy CRM in, clean CRM out"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryan Michaels", email = "michaelsryan34@gmail.com" }]

dependencies = [
  "anthropic>=0.40.0",
  "faker>=25.0.0",
  "pandas>=2.2.0",
  "rapidfuzz>=3.9.0",
  "simple-salesforce>=1.12.6",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
  "typer>=0.12.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
cleanroom = "cleanroom.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
